--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,26 +12,22 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
+        android:id="@+id/nav_anniversary"
+        android:name="com.jnu.i_time.ui.anniversary.AnniversaryFragment"
+        android:label="@string/menu_anniversary"
+        tools:layout="@layout/fragment_anniversary" />
+
+    <fragment
         android:id="@+id/nav_live"
         android:name="com.jnu.i_time.ui.live.LiveFragment"
         android:label="@string/menu_live"
-        tools:layout="@layout/fragment_live" >
-        <action
-            android:id="@+id/action_nav_live_self"
-            app:destination="@id/nav_live" />
-    </fragment>
+        tools:layout="@layout/fragment_live" />
 
     <fragment
         android:id="@+id/nav_work"
         android:name="com.jnu.i_time.ui.work.workFragment"
         android:label="@string/menu_work"
         tools:layout="@layout/fragment_work" />
-
-    <fragment
-        android:id="@+id/nav_anniversary"
-        android:name="com.jnu.i_time.ui.anniversary.AnniversaryFragment"
-        android:label="@string/menu_anniversary"
-        tools:layout="@layout/fragment_anniversary" />
 
     <fragment
         android:id="@+id/nav_share"
