--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -52,6 +52,7 @@
             android:layout_height="35dp"
             android:layout_gravity="center_vertical"
             android:layout_weight="1"
+            android:gravity="top"
             android:text="TextView"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
