--- a/app/src/main/res/layout/activity_new_or_update_day.xml
+++ b/app/src/main/res/layout/activity_new_or_update_day.xml
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias="0.003">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/new_update_pitcure"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -49,7 +50,6 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.159"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/toolbar__"
                 app:layout_constraintVertical_bias="0.0" />
 
             <EditText
@@ -110,6 +110,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <com.google.android.material.navigation.NavigationView
+            android:id="@+id/edit_menu"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clickable="true"
