--- a/app/src/main/res/layout/activity_day_message.xml
+++ b/app/src/main/res/layout/activity_day_message.xml
@@ -14,7 +14,14 @@
         <FrameLayout
             android:id="@+id/background"
             android:layout_width="match_parent"
-            android:layout_height="250dp">
+            android:layout_height="306dp">
+
+            <ImageView
+                android:id="@+id/day_mess_picture"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar_mess"
@@ -26,12 +33,13 @@
                 app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                 app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+
         </FrameLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/mess_menu"
-            android:layout_width="409dp"
-            android:layout_height="479dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:menu="@menu/activity_day_mess_menu" />
 
     </LinearLayout>
