--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -13,20 +13,34 @@
         android:layout_weight="1"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textView_interval"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:background="@drawable/backgroud_1"
-            android:gravity="center"
-            android:shadowColor="@color/colorAccent"
-            android:text="TextView"
-            android:textColor="@android:color/background_light"
-            android:textSize="18sp"
-            android:textStyle="bold|italic"
-            app:autoSizeTextType="none" />
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/day_item_picture"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                tools:srcCompat="@tools:sample/avatars" />
+
+            <TextView
+                android:id="@+id/textView_interval"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:background="?attr/actionBarDivider"
+                android:gravity="center"
+                android:shadowColor="@color/colorAccent"
+                android:text="TextView"
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="bold|italic"
+                app:autoSizeTextType="none" />
+        </FrameLayout>
     </LinearLayout>
 
     <LinearLayout
