--- a/app/src/main/res/layout/fragment_anniversary.xml
+++ b/app/src/main/res/layout/fragment_anniversary.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fadeScrollbars="true"
+    android:fadingEdge="horizontal|vertical"
+    android:fitsSystemWindows="true"
+    android:requiresFadingEdge="horizontal">
 
-    <ListView
-        android:id="@+id/button_list"
-        android:layout_width="405dp"
-        android:layout_height="wrap_content"
-        android:divider="@android:drawable/list_selector_background"
-        android:dividerHeight="-8dp"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.015" />
+        app:layout_constraintTop_toTopOf="parent">
 
+        <ListView
+            android:id="@+id/button_list"
+            android:layout_width="405dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:divider="@android:drawable/list_selector_background"
+            android:dividerHeight="0dp"
+            android:headerDividersEnabled="false" />
+    </LinearLayout><![CDATA[
+
+    >
+
+]]>
 </androidx.constraintlayout.widget.ConstraintLayout>
