最终完成（加入MyApplication处理所有的全局变量）(主题修改部分完成) (第七次修改).

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,7 +5,7 @@
         android:id="@+id/theme_settings"
         android:orderInCategory="100"
         android:title="@string/theme_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never|collapseActionView" />
     <item
         android:id="@+id/language_settings"
         android:checkable="false"
